# Sculptor

./: .gitignore  CMakeLists.txt  main.cpp
camera/: basic_camera.cpp  basic_camera.hpp  camera_base.hpp  follower_camera.cpp  follower_camera.hpp  third_person_camera.cpp  third_person_camera.hpp
drill/: drill.cpp  drill.hpp
glInstancedObject/: gl_instanced_object.cpp  gl_instanced_object.hpp
glObject/: glObject.cpp  glObject.hpp  gl_object.cpp  gl_object.hpp
include/: drill.hpp  glObject.hpp  kdtree.hpp  kdtree_cpu.hpp  kdtree_gpu.hpp  matrix_applier.hpp  objloader.hpp  sculpting_material.hpp  sculptor.hpp  shader_loader.hpp
kdtree/: kdtree.cpp  kdtree.hpp  kdtree_cpu.cpp  kdtree_cpu.hpp  kdtree_gpu.cu  kdtree_gpu.hpp
kdtreeConstructor/: kdtree_constructor_base.cpp  kdtree_cpu_std_constructor.cpp  kdtree_cpu_std_constructor.hpp  kdtree_gpu_thrust_constructor.hpp
kdtreeRemover/: kdtree_cpu_remover.cpp  kdtree_remover_base.cpp  kdtree_remover_base.hpp
kdtree_constructor/: kdtree_constructor_base.cpp  kdtree_constructor_base.hpp  kdtree_cpu_std_constructor.cpp  kdtree_cpu_std_constructor.hpp  kdtree_gpu_thrust_constructor.cu  kdtree_gpu_thrust_constructor.hpp
kdtree_remover/: kdtree_cpu_remover.cpp  kdtree_cpu_remover.hpp  kdtree_gpu_remover.cu  kdtree_gpu_remover.hpp  kdtree_remover_base.cpp  kdtree_remover_base.hpp
light/: directional_light.cpp  directional_light.hpp  light_base.cpp  light_base.hpp  point_light.cpp  point_light.hpp  spotlight.cpp  spotlight.hpp
matrixApplier/: matrix_applier.cu  matrix_applier.hpp  matrix_applier_base.hpp
modelProvider/: model_provider_base.hpp  obj_provider.cpp  obj_provider.hpp
objLoader/: obj_loader.cpp  obj_loader.hpp  obj_loader_base.hpp
sculptingMaterial/: collision_algorithm_cpu.cpp  collision_algorithm_cpu.hpp  cube_sculpting_material.cpp  cube_sculpting_material.hpp  cube_sculpting_material_cpu.cpp  cube_sculpting_material_cpu.hpp  sculpting_material.cpp  sculpting_material.hpp
sculpting_material/: cube_sculpting_material.cpp  cube_sculpting_material.hpp  sculpting_material.cpp  sculpting_material.hpp
sculptor/: sculptor.cpp  sculptor.hpp
shaderFactory/: shader_factory.hpp  shader_factory_impl.cpp  shader_factory_impl.hpp
shaderLoader/: shader_loader.cpp  shader_loader.hpp  shader_loader_base.hpp
shaderProgram/: shader_program.cpp  shader_program.hpp  shader_program_base.hpp
shaderProvider/: shader_provider.cpp  shader_provider.hpp  shader_provider_base.hpp
shaders/: CubeShader.fs  DrillShader.fs  DrillShader.vs  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
shapeGenerator/: cube_generator.cpp  cube_generator.hpp  hollow_cube_generator.cpp  hollow_cube_generator.hpp  shape_generator_base.hpp
src/: Sculptor.cpp  drill.cpp  glObject.cpp  header.cu  kdtree.cpp  kdtree_cpu.cpp  matrix_applier.cu  objloader.cpp  sculpting_material.cpp  sculptor.cpp  shader_loader.cpp
textureLoader/: texture_loader.cpp  texture_loader.hpp  texture_loader_base.hpp
textureProvider/: png_texture_provider.cpp  png_texture_provider.hpp  (+1 more)
(+18 files in other folders)
